# orchestratorai

./: .env.example  .gitignore  ALL_TASKS_COMPLETE.md  API_CREDIT_PROTECTION.md  API_PROTECTION_CHECKLIST.md  API_PROTECTION_QUICKREF.md  API_PROTECTION_SUMMARY.md  COMPLETION_SUMMARY.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_VISUAL_GUIDE.md  DELIVERABLES.md  DOCUMENTATION_INDEX.md  E2E_TEST_RESULTS.md  FIXES_COMPLETE.md  HOW_TO_START.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_INTEGRATION.md  PHASE_3.5_RESULTS.md  PHASE_4_SUCCESS.md  PROJECT_COMPLETE.md  PR_522_REMEDIATION_PLAN.md  PR_AUTOMATION_STATUS.md  PR_MONITORING_IMPLEMENTATION.md  PR_QA_COMPLETE.md  PR_SUMMARY.md  PR_SUMMARY_PR2.md  QUICKSTART.md  QUICKSTART_MANUAL.md  QUICK_START_GUIDE.md  README.md  READY_TO_USE.md  START_HERE.md  SUCCESS_REPORT.md  TASK_COMPLETION_DASHBOARD.md  TASK_COMPLETION_SUMMARY.md  TEST_RESULTS_PR522.md  USAGE.md  USAGE_GUIDE.md  manage.py  (+9 more)
src/: __init__.py  dashboard.py  github_client.py  main.py  menu.py  orchestrator.py  perplexity.py
src/agents/: __init__.py  claude.py  copilot.py
src/monitoring/: __init__.py  pr_monitor.py  review_parser.py
src/planning/: __init__.py  merge_recommender.py  plan_manager.py
src/qa/: __init__.py  build.py  vercel.py
